# cbt_pred_platform

./: .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-lambda.txt  requirements.txt
fitbit_to_aws_s3/: .env.example  README.md  fitbit_multi_to_s3.py  main.py  requirements.txt  token_manager_multi.py
preprocessing/: preprocessing.py
processing_scripts/: ML_Script_PROSPIE_Exp_Data_Temporal_Features.ipynb
src/features/: __init__.py  transformations.py
src/serving/: __init__.py  fitbit_loader.py  handler.py  predictor.py
tests/: test_transformations.py
