# Modern Python project configuration using PEP 517/518
# Defines:
#   - Project metadata (name, version, description)
#   - Dependencies and optional dependency groups
#   - Build system requirements
#   - Tool configurations (pytest, black, ruff, mypy)

[project]
name = "cbt_pred_platform"
version = "0.1.0"
description = "CBT Prediction Platform using Fitbit wearable data"
requires-python = ">=3.11"

[project.dependencies]
# Core dependencies listed here

[project.optional-dependencies]
# dev = [...] - Development dependencies
# test = [...] - Testing dependencies

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]